src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AVB_Account_ID__c</fullName>
        <description>This field is being added to support searching when a Contact and Account names are in the system twice to help tell them apart.  This field and its data load should be removed when SFDC allows cross-reference to display data from a look-up link, e.g. AVB Account ID or Account Status</description>
        <label>AVB Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVB_SEGMENT__c</fullName>
        <description>Resident Segment</description>
        <label>Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Denormalized data field to support searching on Contacts with the same name, Customer Group and community.  Should be removed from data load and pages once cross-referecing is available in SFDC. (BT 8-2-2007)</description>
        <label>Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBrandFlag__c</fullName>
        <formula>if(ContactBrandLabel__c = &quot;AVA&quot;, image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tli&quot;, &quot;AVA&quot;, 20, 45), 
  if(ContactBrandLabel__c = &quot;AVB&quot;, image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tln&quot;, &quot;AVB&quot;, 20, 45), 
    if(ContactBrandLabel__c = &quot;EAVES&quot;, image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tls&quot;, &quot;eaves&quot;,  20, 45), &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBrandLabel__c</fullName>
        <formula>Account.CustomerGroupBrandLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Dept__c</fullName>
        <label>Corporate Dept</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Customer (AVB Associate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Customer (Vendor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Retail Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Retail Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Address_1__c</fullName>
        <label>Employer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_2__c</fullName>
        <label>Employer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <label>Employer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <label>Employer State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Zip__c</fullName>
        <label>Employer Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Email__c</fullName>
        <inlineHelpText>Email Address loaded from Foundation or MRI.</inlineHelpText>
        <label>Loaded Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Guarantor Flag - To be loaded from MRI</description>
        <label>Guarantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MRI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRINameGroup__c</fullName>
        <formula>Account.Unique_Record_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRI NameGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Community_ID__c</fullName>
        <formula>Account.Parent_Community_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data imported from Foundation indicating that this Contact is the Primary Contact on this Customer Group</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Alert__c</fullName>
        <description>Prior resident alert symbol</description>
        <formula>IF( 
OR 
(Prior_Resident__c=True, 
Role__c=&quot;VACATED&quot;), 
(IMAGE( &quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000Lthr&quot;, &quot;Prior Contact&quot;)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Alert - This customer has been deleted from Foundation.</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox will be used to identify contacts (customers) that have been deleted from Foundation.</description>
        <inlineHelpText>This checkbox flags customers who were deleted from Foundation as Prior.</inlineHelpText>
        <label>Prior Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PropPhaseID__c</fullName>
        <label>Property Phase ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used on the Master Corporate Contact Page Layout</description>
        <inlineHelpText>Enter the Contact&apos;s Region</inlineHelpText>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Type__c</fullName>
        <label>Secondary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Id__c</fullName>
        <description>Concatenation of customer group account number and customer ID to result in a unique record ID that can be used during the upsert process.</description>
        <externalId>true</externalId>
        <label>Unique Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <externalId>true</externalId>
        <label>Work Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailBrandHeaderURL__c</fullName>
        <formula>if( ContactBrandLabel__c = &quot;AVA&quot;, &quot;&lt;!DOCTYPE html PUBLIC &apos;-//W3C//DTD XHTML 1.0 Transitional//EN&apos; &apos;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&apos;&gt; &lt;html xmlns=&apos;http://www.w3.org/1999/xhtml&apos;&gt; &lt;head&gt; &lt;meta http-equiv=&apos;Content-Type&apos; content=&apos;text/html; charset=iso-8859-1&apos; /&gt; &lt;!--fix for Hotmail centering issue FF, Chrome, Safari--&gt; &lt;style type=&apos;text/css&apos;&gt; body { width: 100% !important; }&lt;/style&gt; &lt;title&gt;AVA Internal Email&lt;/title&gt; &lt;/head&gt; &lt;body&gt; &lt;div align=&apos;center&apos;&gt; &lt;table style=&apos;background-color:#4d4d4f;border:solid 1px #000000;&apos; width=&apos;600&apos; cellpadding=&apos;0&apos; cellspacing=&apos;0&apos; border=&apos;0&apos; summary=&apos;main&apos;&gt; &lt;!--main--&gt; &lt;tr&gt; &lt;td style=&apos;background-color:#4d4d4f;text-align:center;color:#ffffff;font-family:verdana,sans-serif;&apos;&gt; &lt;a href=&apos;#&apos; style=&apos;color:#ffffff;text-decoration:none;&apos;&gt; &lt;img title=&apos;Ava Nob Hill&apos; src=&apos;http://portal.avaloncommunities.com/avaloncore/emailblasts/sep11/images/ava-newTop.jpg&apos; width=&apos;600&apos; height=&apos;201&apos; alt=&apos;AVA Internal Email&apos; border=&apos;0&apos; style=&apos;color:#ffffff;font-family:verdana, sans-serif;font-size:16px;display:block;&apos; /&gt; &lt;/a&gt; &lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td style=&apos;background-color:#4d4d4f;color:#ffffff;font-family:verdana, sans-serif;font-size:22px;font-weight:normal;padding-top:0px;padding-left:50px;padding-right:50px;vertical-align:top;&apos;&gt; &lt;table&gt; &lt;tr&gt; &lt;td style=&apos;background-color:#4d4d4f;color:#ffffff;font-family:verdana, sans-serif;font-size:18px;font-weight:normal;padding-top:12px;text-align:left;&apos;&gt; &lt;a  href=&apos;#&apos; style=&apos;background-color:#4d4d4f;font-family:verdana, sans-serif;color:#ffffff;text-decoration:none;&apos;&gt;&lt;/a&gt; &lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td style=&apos;background-color:#4d4d4f;color:#ffffff;font-family:verdana, sans-serif;font-size:14px;padding-top:12px;text-align:left;&apos;&gt;&quot;, if(ContactBrandLabel__c = &quot;AVB&quot;, &quot;&lt;!DOCTYPE html PUBLIC &apos;-//W3C//DTD XHTML 1.0 Transitional//EN&apos; &apos;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&apos;&gt; &lt;html xmlns=&apos;http://www.w3.org/1999/xhtml&apos;&gt; &lt;head&gt; &lt;meta http-equiv=&apos;Content-Type&apos; content=&apos;text/html; charset=iso-8859-1&apos; /&gt; &lt;!--fix for Hotmail centering issue FF, Chrome, Safari--&gt; &lt;style type=&apos;text/css&apos;&gt; body { width: 100% !important; }&lt;/style&gt; &lt;title&gt;AVA&quot;,&quot;&lt;!DOCTYPE html PUBLIC &apos;-//W3C//DTD XHTML 1.0 Transitional//EN&apos; &apos;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&apos;&gt;&lt;html xmlns=&apos;http://www.w3.org/1999/xhtml&apos;&gt;&lt;head&gt;&lt;meta http-equiv=&apos;Content-Type&apos; content=&apos;text/html; charset=iso-8859-1&apos; /&gt;&lt;!--fix for Hotmail centering issue FF, Chrome, Safari--&gt;&lt;style type=&apos;text/css&apos;&gt;body { width: 100% !important; }* {margin:0;}* {padding:0;}	table{table-layout: fixed;}div, p, a, li, td { -webkit-text-size-adjust:none; }	/*iphone 4g*/@media only screen and (-webkit-min-device-pixel-ratio: 2) {td[class=&apos;copy&apos;] {		font-size: 19px !important; } td[class=&apos;header&apos;] { font-size: 28px !important; } }/*iphone 3g*/@media only screen and (max-device-width: 480px) {td[class=&apos;copy&apos;] {font-size: 19px !important;}td[class=&apos;header&apos;] {font-size: 28px !important;}}/*android galaxy styles*/@media only screen and (-webkit-device-pixel-ratio:1.5){td[class=&apos;copy&apos;] {font-size: 19px !important;}td[class=&apos;header&apos;] {font-size: 28px !important;}}&lt;/style&gt; &lt;title&gt;Eaves by Avalon&lt;/title&gt; &lt;/head&gt; &lt;body style=&apos;background-color:#ffffff;&apos;&gt; &lt;div align=&apos;center&apos;&gt; &lt;table id=&apos;outer-wrap&apos; style=&apos;border: solid 1px #8a8a8a;&apos; cellpadding=&apos;0&apos; cellspacing=&apos;0&apos;&gt;&lt;tr&gt;&lt;td width=&apos;600&apos; style=&apos;background-color: #ffffff;&apos;&gt;&lt;table cellpadding=&apos;0&apos; cellspacing=&apos;0&apos;&gt;&lt;tr&gt;&lt;td width=&apos;600&apos;&gt;&lt;a href=&apos;#&apos;&gt;&lt;img src=&apos;http://portal.avaloncommunities.com/avaloncore/emailblasts/dec11/images/eaves-genericTop.gif&apos; alt=&apos;Eaves by Avalon&apos; style=&apos;border:none;outline:none;display:block;font-family:Arial,Helvetica,sans-serif;color:#676C66;text-align:center;&apos; height=&apos;205&apos; width=&apos;600&apos; /&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td class=&apos;copy&apos; style=&apos;padding-left:42px;padding-right:100px;padding-top:14px;padding-bottom:40px;font-family:Arial,Helvetica,sans-serif;font-size:14px;color:#676C66;text-align:left;&apos;&gt;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Brand Header URL</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Status__c</columns>
        <columns>AVB_Account_ID__c</columns>
        <columns>Role__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContactswithemail</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Status__c</columns>
        <columns>AVB_Account_ID__c</columns>
        <columns>Role__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Contacts with email</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>test_of_priors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Customer_ID__c</columns>
        <columns>Role__c</columns>
        <columns>Prior_Resident__c</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prior_Resident__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>avalon cove</value>
        </filters>
        <filters>
            <field>Customer_ID__c</field>
            <operation>notContain</operation>
            <value>AVB</value>
        </filters>
        <label>test of priors-MRI</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CommunityContact</fullName>
        <active>true</active>
        <description>Record Types for Contacts related to Community Accounts</description>
        <label>Community Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerGroupContact</fullName>
        <active>true</active>
        <description>Record Types for Contacts related to Customer Group Accounts</description>
        <label>Customer Group Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Corporate_Contact</fullName>
        <active>true</active>
        <description>Record Types for Contacts related to Master Corporate Accounts</description>
        <label>Master Corporate Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Contact</fullName>
        <active>true</active>
        <label>Retail Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>Prevent_New_Contacts</fullName>
        <active>false</active>
        <description>Only the System Admin or Integration User should be able to create Contacts unless it is a Vendor Contact.  Because anyone can create a Vendor Contact - a row level permission not covered in Profile settings - this Validation Rule will prevent this.</description>
        <errorConditionFormula>AND(
ISNEW(), 
$Profile.Id&lt;&gt;&quot;00e60000000ndqS&quot;,
$Profile.Id&lt;&gt;&quot;00e60000000r1eq&quot;,
RecordTypeId &lt;&gt;&quot;012600000000nBC&quot;)</errorConditionFormula>
        <errorMessage>Your Profile only allows you to create Vendor Contacts, not Contacts for Customer Groups or Communities.  Please contact your System Administrator.</errorMessage>
    </validationRules>
</CustomObject>